# nextstat.io

./: -  .deny.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DCO.md  GOVERNANCE.md  LICENSE-COMMERCIAL  Makefile  NOTICE  README.md  THIRD_PARTY_LICENSES  pytest.ini  rust-toolchain.toml  rustc-ice-2026-02-11T09_59_04-99560.txt  rustfmt.toml  tmp_diff.txt
bindings/ns-py/: Cargo.toml  README.md  build.rs  pyproject.toml
bindings/ns-py/src/: lib.rs
bindings/ns-r/src/: .gitignore  Cargo.toml  Makevars.win  entrypoint.c
bindings/ns-wasm/: Cargo.toml
bindings/ns-wasm/src/: lib.rs
crates/ns-ad/: Cargo.toml
crates/ns-ad/benches/: ad_benchmark.rs
crates/ns-ad/src/: dual32.rs  lib.rs  scalar.rs  tape.rs
crates/ns-cli/: Cargo.toml
crates/ns-cli/src/: analysis_spec.rs  churn.rs  convert.rs  discover.rs  main.rs  report.rs  run.rs  survival.rs  unbinned_gpu.rs  unbinned_spec.rs  validation_report.rs
crates/ns-cli/tests/: cli_build_hists.rs  cli_bundle.rs  cli_bundle_more_commands.rs  cli_churn.rs  cli_config_schema.rs  cli_export_histfactory.rs  cli_fit.rs  cli_hs3_scope.rs  cli_import_histfactory.rs  cli_import_trex_config.rs  cli_limits.rs  cli_report.rs  cli_report_deterministic.rs  cli_report_golden.rs  cli_run_analysis_spec.rs  cli_run_histfactory_smoke.rs  cli_survival.rs  cli_timeseries.rs  cli_trex_import_config.rs  cli_unbinned_binned_baseline.rs  cli_unbinned_dcr_baseline.rs  cli_unbinned_fit.rs  cli_validate.rs  cli_validation_report.rs  cli_viz.rs  cli_viz_corr.rs  cli_viz_distributions.rs  cli_viz_pulls.rs  phase3_1_tutorial_smoke.rs
crates/ns-compute/: Cargo.toml  build.rs
crates/ns-compute/benches/: flow_batch_nll.rs  poisson_nll_full.rs  simd_benchmark.rs
crates/ns-compute/examples/: glm_cublas_eval.rs
crates/ns-compute/kernels/: batch_nll_grad.cu  batch_nll_grad.metal  differentiable_nll_grad.cu  differentiable_nll_grad.metal  fault_tree_mc.cu  fault_tree_mc.metal  flow_nll_reduce.cu  glm_cublas_aux.cu  mams_engine.cuh  mams_leapfrog.cu  mams_leapfrog.metal  unbinned_common.cuh  unbinned_lbfgs_fit.cu  unbinned_nll_grad.cu  unbinned_nll_grad.metal
crates/ns-compute/src/: accelerate.rs  checksums.rs  cpu.rs  cuda.rs  cuda_batch.rs  cuda_flow_batch.rs  cuda_flow_nll.rs  cuda_glm_cublas.rs  cuda_mams.rs  cuda_types.rs  cuda_unbinned.rs  cuda_unbinned_batch.rs  cuda_unbinned_toy.rs  differentiable.rs  fault_tree_cuda.rs  fault_tree_metal.rs  gpu_accel.rs  lib.rs  mams_trait.rs  metal.rs  metal_batch.rs  metal_differentiable.rs  metal_kernel_cache.rs  metal_mams.rs  metal_parquet.rs  metal_types.rs  metal_unbinned.rs  metal_unbinned_batch.rs  metal_unbinned_toy.rs  nvrtc_mams.rs  simd.rs  unbinned_types.rs
crates/ns-compute/tests/: flow_cuda_ep_iobinding.rs  unbinned_gpu_parity.rs  unbinned_toy_sampler_smoke.rs
crates/ns-core/: Cargo.toml
crates/ns-core/benches/: core_benchmark.rs
crates/ns-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/ns-inference/: Cargo.toml
crates/ns-inference/benches/: em_benchmark.rs  glm_fit_predict_benchmark.rs  hier_benchmark.rs  hypotest_benchmark.rs  kalman_benchmark.rs  mle_benchmark.rs  nuts_benchmark.rs  regression_benchmark.rs
crates/ns-inference/src/: adapt.rs  artifacts.rs  batch.rs  bioequivalence.rs  bootstrap_ci.rs  builder.rs  chain.rs  chain_ladder.rs  churn.rs  competing_risks.rs  diagnostics.rs  differentiable.rs  eight_schools.rs  evt.rs  fault_tree_mc.rs  foce.rs  gpu_batch.rs  gpu_flow_session.rs  gpu_session.rs  gpu_single.rs  hmc.rs  hybrid.rs  hypotest.rs  laplace.rs  laps.rs  lbfgs.rs  lib.rs  lmm.rs  mams.rs  meta_analysis.rs  metal_batch.rs  metal_differentiable.rs  mle.rs  nuts.rs  ode.rs  ode_pk.rs  optimizer.rs  ordinal.rs  pd.rs  perf_hints.rs  (+18 more)
crates/ns-inference/tests/: gpu_flow_session_test.rs  laps_benchmark.rs  laps_glm_n5000_gate.rs  laps_jit_test.rs  laps_nan_potential_test.rs  mams_cpu_benchmark.rs  mams_warmup_benchmark.rs  nonmem_parity.rs  parameter_recovery.rs  pharma_benchmark.rs  phase3_benchmark.rs
crates/ns-prob/: Cargo.toml
crates/ns-prob/benches/: distributions_benchmark.rs
crates/ns-prob/src/: bernoulli.rs  beta.rs  binomial.rs  distributions.rs  exponential.rs  gamma.rs  lib.rs  math.rs  neg_binomial.rs  normal.rs  poisson.rs  student_t.rs  transforms.rs  weibull.rs
crates/ns-root/: Cargo.toml
crates/ns-root/examples/: bench_expr.rs  bench_tree.rs  bench_zstd.rs
crates/ns-root/src/: basket.rs  branch_reader.rs  cache.rs  chained_slice.rs  datasource.rs  decompress.rs  directory.rs  error.rs  expr.rs  file.rs  filler.rs  histogram.rs  key.rs  lib.rs  rbuffer.rs  rntuple.rs  tree.rs
crates/ns-root/tests/: branch_reader_cache_bench.rs  lazy_branch_reader.rs  read_fixed_array_tree.rs  read_histograms.rs  read_tree.rs  read_unsplit_vector_tree.rs  read_unsplit_vector_tree_small.rs  rntuple_discovery.rs  rntuple_perf_gate.rs  trex_expr_corpus.rs  zstd_block_bench.rs
crates/ns-server/: Cargo.toml  Dockerfile
crates/ns-server/src/: auth.rs  jobs.rs  main.rs  openapi.rs  pool.rs  rate_limit.rs  routes.rs  state.rs  tools.rs
crates/ns-translate/: Cargo.toml
crates/ns-translate/benches/: model_benchmark.rs  nll_benchmark.rs
crates/ns-translate/src/: lib.rs
crates/ns-translate/tests/: ntuple_systematics.rs  wasm_smoke.rs
crates/ns-unbinned/: Cargo.toml
crates/ns-unbinned/benches/: unbinned_nll.rs
crates/ns-unbinned/src/: event_parquet.rs  event_store.rs  fused_kernel.rs  interp.rs  lib.rs  model.rs  normalize.rs  spec.rs  tests.rs
crates/ns-unbinned/tests/: flow_grad_integration.rs  wasm_smoke.rs
crates/ns-viz/: Cargo.toml
crates/ns-viz-render/: Cargo.toml
crates/ns-viz-render/src/: canvas.rs  color.rs  config.rs  font.rs  header.rs  lib.rs  primitives.rs  text.rs  theme.rs
crates/ns-viz/src/: cls.rs  contour.rs  corr.rs  distributions.rs  gammas.rs  injection.rs  lib.rs  morphing.rs  pie.rs  profile.rs  pulls.rs  (+7 more)
crates/ns-zstd/: Cargo.toml
crates/ruzstd/: Cargo.toml  FORK.md
crates/zstd-shim/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: ns_root_decompress.rs
(+1470 files in other folders)
