[package]
name = "ns-ad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Automatic differentiation (AD) and optimizer utilities for NextStat"

[dependencies]
ns-core.workspace = true
thiserror.workspace = true
ndarray.workspace = true
num-traits.workspace = true
log.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
env_logger.workspace = true
criterion.workspace = true

[[bench]]
name = "ad_benchmark"
harness = false
