[package]
name = "ns-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for NextStat"

[[bin]]
name = "nextstat"
path = "src/main.rs"

[dependencies]
ns-core = { path = "../ns-core" }
ns-compute = { path = "../ns-compute" }
ns-inference = { path = "../ns-inference" }
ns-translate = { path = "../ns-translate" }
ns-viz = { path = "../ns-viz" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
statrs.workspace = true
sha2 = "0.10"

[dev-dependencies]
