[package]
name = "ns-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for NextStat"

[[bin]]
name = "nextstat"
path = "src/main.rs"

[dependencies]
ns-core.workspace = true
ns-compute.workspace = true
ns-inference.workspace = true
ns-translate.workspace = true
ns-viz.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
statrs.workspace = true
sha2 = "0.10"

[features]
default = []
accelerate = ["ns-inference/accelerate", "ns-translate/accelerate", "ns-compute/accelerate"]
cuda = ["ns-inference/cuda", "ns-translate/cuda", "ns-compute/cuda"]

[dev-dependencies]
