[package]
name = "ns-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types, traits, and error handling for NextStat"

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
env_logger.workspace = true
criterion.workspace = true

[[bench]]
name = "core_benchmark"
harness = false
