[package]
name = "ns-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Statistical inference (MLE, NUTS, profile likelihood) for NextStat"

[dependencies]
ns-core = { path = "../ns-core" }
ns-compute = { path = "../ns-compute" }
ns-prob = { path = "../ns-prob" }
ns-translate = { path = "../ns-translate" }
thiserror.workspace = true
log.workspace = true
nalgebra.workspace = true
argmin.workspace = true
argmin-math = { workspace = true, features = ["ndarray_latest"] }
ndarray.workspace = true
rayon.workspace = true
rand.workspace = true
rand_distr.workspace = true
statrs.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "mle_benchmark"
harness = false

[[bench]]
name = "hypotest_benchmark"
harness = false

[[bench]]
name = "regression_benchmark"
harness = false
