[package]
name = "ns-root"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Native ROOT file reader for NextStat (TH1D/TH1F histograms, TTree/TBranch columnar access, expression engine, histogram filler)"

[dependencies]
thiserror.workspace = true
log.workspace = true
flate2 = "1.1"
lz4_flex = "0.11"
memmap2 = "0.9"
rayon.workspace = true

[dev-dependencies]
approx.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
