[package]
name = "ns-translate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Format translators (pyhf JSON, HistFactory XML, ROOT) for NextStat"

[dependencies]
ns-core.workspace = true
ns-ad.workspace = true
ns-compute.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log.workspace = true
rayon.workspace = true
statrs.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "nll_benchmark"
harness = false

[[bench]]
name = "model_benchmark"
harness = false
