[package]
name = "ns-viz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Visualization utilities for NextStat"

[dependencies]
ns-core = { path = "../ns-core" }
thiserror.workspace = true

[dev-dependencies]
