[package]
name = "ns-viz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Visualization utilities for NextStat"

[dependencies]
ns-core = { path = "../ns-core" }
ns-inference = { path = "../ns-inference" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
