[package]
name = "zstd"
version = "0.13.3"
edition = "2024"
license = "AGPL-3.0-or-later OR LicenseRef-Commercial"
description = "Pure-Rust shim for the zstd crate, backed by ns-zstd (used to enable Parquet Zstd on wasm32)."

[features]
default = []
# Force pure-Rust backend even on native (useful for comparing ns-zstd vs libzstd).
pure-rust = []

[dependencies]
ns-zstd = { path = "../ns-zstd" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd-safe = { version = "7.2.4", default-features = false, features = ["std"] }
